@@ -46,6 +46,7 @@ tasksel (3.10) UNRELEASED; urgency=low
   [ Bastian Blank ]
   * Remove manual task.
   * Remove unused support for Packages: task-fields.
+  * Completely remove support for aptitude task syntax.
 
  -- Christian Perrier <bubulle@debian.org>  Sun, 25 Mar 2012 14:52:49 +0200
 
